--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 
-spring.security.user.name=nguyen
-spring.security.user.password=0000
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=interiorecm123@gmail.com
+spring.mail.password=ggfrqytjwbfkbuhl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
