--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,27 @@
-spring.application.name=InteriorsECM
-spring.datasource.url=jdbc:mysql://localhost:3306/interiorsecm
+
+spring.jpa.open-in-view=true
+
+# MySQL (Data Source chính)
+spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/interiorsecm
 spring.datasource.username=root
 spring.datasource.password=20042809
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# TimescaleDB (Data Source ph?)
+spring.timescaledb.datasource.jdbc-url=jdbc:postgresql://localhost:5432/access_analysis
+spring.timescaledb.datasource.username=postgres
+spring.timescaledb.datasource.password=20042809
+spring.timescaledb.datasource.driver-class-name=org.postgresql.Driver
+spring.timescaledb.jpa.hibernate.ddl-auto=update  
+spring.timescaledb.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
-
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -14,3 +29,4 @@ spring.mail.username=interiorecm123@gmail.com
 spring.mail.password=ggfrqytjwbfkbuhl
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
