--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.jpa.open-in-view=true
-
+spring.timescaledb.jpa.open-in-view=true
 # MySQL (Data Source chính)
 spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/interiorsecm
 spring.datasource.username=root
@@ -18,9 +18,6 @@ spring.timescaledb.jpa.hibernate.ddl-auto=update
 spring.timescaledb.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Logging
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 
 spring.mail.host=smtp.gmail.com
