--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.jpa.open-in-view=true
 spring.timescaledb.jpa.open-in-view=true
-# MySQL (Data Source chính)
+
 spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/interiorsecm
 spring.datasource.username=root
 spring.datasource.password=20042809
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-# TimescaleDB (Data Source ph?)
+
 spring.timescaledb.datasource.jdbc-url=jdbc:postgresql://localhost:5432/access_analysis
 spring.timescaledb.datasource.username=postgres
 spring.timescaledb.datasource.password=20042809
@@ -26,4 +26,18 @@ spring.mail.username=interiorecm123@gmail.com
 spring.mail.password=ggfrqytjwbfkbuhl
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Redis Configuration
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
+spring.data.redis.database=0
+spring.data.redis.timeout=2000ms
+spring.data.redis.jedis.pool.max-active=8
+spring.data.redis.jedis.pool.max-idle=8
+spring.data.redis.jedis.pool.min-idle=0
+spring.data.redis.jedis.pool.max-wait=-1ms
+
+# Disable Spring Session completely
+spring.session.store-type=none
 
